--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.0.1",
     "zustand": "^3.4.1"
   },
