--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "zustand": "^3.4.1"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
